# hse_mlops

./: .gitignore  .pre-commit-config.yaml  README.md  infer.py  pyproject.toml  test_data.dvc  train.py  train_data.dvc  val_data.dvc
.dvc/: config
.github/workflows/: pre-commit.yml
classification_project/model/: base.py  cat_dog_cls_model.py
configs/: app_config.yaml  app_config_dev.yaml
model_checkpoints/: .gitignore  cat_dog_cls_resnet18_v0.cp.dvc
src/core/: data_models.py
src/model/: base.py  cat_dog_cls_model.py
