[tool.poetry]
name = "hse-mlops"
version = "0.1.0"
description = ""
authors = ["vgerasimov <vgerasimov@quantumbrains.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.5.0"
pandas = "^2.1.3"
scikit-learn = "^1.3.2"
torch = "^2.1.2"
torchvision = "^0.16.2"
tqdm = "^4.66.1"
loguru = "^0.7.2"
dvc = "^3.36.0"
dvc-s3 = "^3.0.1"
hydra-core = "^1.3.2"
mlflow = "^2.9.2"
fire = "^0.5.0"
flake8-pyproject = "^1.2.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
pytest = "^7.4.3"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.flake8]
per-file-ignores = [
    '__init__.py:F401',
]
extend-ignore = ['E203']
exclude = [
    '.git',
    '__pycache__',
    '_version.py'
]
max-line-length = 120
max-complexity = 10

